@@ -121,15 +121,10 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_Images.rpt">Papers Requiring Images</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_LackingImages.rpt">Papers Requiring Permissions</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable2.rpt">Papers containing genes that are not in the full coded portion of the database</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable3.rpt">Blot-only papers that have not been full coded</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_OneGenePapers.rpt">One gene papers</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable.rpt">Markers that have no full coded data</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_EarlyPapers.rpt">Early paper for popular genes</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_EarlyEmbPapers.rpt">Early Embryonic Expression Papers</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_MechDev.rpt">Mech Dev papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_GeneExprPatternsandBrainResGeneExprPatterns.rpt">Gene Expr Patterns papers to full code</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_DevBiolandDevelopment.rpt">Dev Biol and Development papers to full code</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_DevDyn.rpt">Dev Dyn papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_References.sql.rpt">Reference selected for GXD which have been not been used</A>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_CellLine.sql.rpt">Cell Lines</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_ImagePanes.rpt">Characteristics of All Image Panes in GXD</A>
